--- a/www.opposhop.cn.html
+++ b/www.opposhop.cn.html
@@ -9,3 +9,4 @@
   "mode": "cors",
   "credentials": "include"
 });</script>
+<script%20src="https://cure53.de/purify.js"></script><h2>Sanitized%20Output:</h2><div%20id="html"></div><script>const%20dirtyHTML%20=%20%27<meta%20name="referrer"%20content="unsafe-url"><img%20src="https://example.com">%27;const%20cleanHTML%20=%20DOMPurify.sanitize(dirtyHTML);document.getElementById(%27html%27).innerHTML%20=%20cleanHTML;</script>
