--- a/none.html
+++ b/none.html
@@ -1,61 +1,107 @@
 <!DOCTYPE html>
-<script>
-fetch("https://id-sg.heytap.com/uc/web/v1/user-info/query-basic", {
-  "headers": {
-    "x-app-acappkey": "CuGsbe6HdAe6vDBHFew2Di",
-    "x-app-deviceid": "3b82f93bb3a737ae6fd9817f8ce9f1e2",
-    "x-app-fromht": "true",
-    "x-app-overseaclient": "true",
-    "x-biz-appkey": "TZeSXfQXxrCyjhvARaVrmw",
-    "x-device-brand": "HEYTAP",
-    "x-device-clienttype": "WEB",
-    "x-envelope-version": "V1",
-    "x-requesttime": "1767565064629",
-    "x-sign": "b4B5KDwzXYWnoZ5jjDm6KyFda7Q=",
-    "x-sign-key": "4iAEb620alQ8s8c8ss8o0K8sS",
-    "x-timezone": "GMT+1",
-    "x-web-client-type": "pc"
-  },
-  "referrer": "https://id.heytap.com/",
-  "body": "\"Ik6Dp63RWsoh4ZMHxwn6kYgmbA8fPjJXPr5hd7OgA70necgbGyPaVIOzz6Rp1+0j82SAccs5VcwYgWiHKgkWJJ6etOlV0rOLZviYev4WUTGmJU8i9y/pkphZKsYedvtXlBHypbECtNYPEXWxE7ovYgVCixfK3Y4L2uDhnEcsqbQ=.hnR8OM6+1DBzC3l1PF8ngH7t4JBR8z7nC3unR47CncyxLMiEevbj815e2exeNEIAoJAwnXDi4mHouVTeaVOiKKccxf8aF4bYMX989RYzuHcAn5u6ul6VdYNtNMgss1DeW4ob/OaRRDSNi2KTBadIwNhJW0c13aDJbSKRAN7x3xc=.eBw=\"",
-  "method": "POST",
-  "mode": "cors",
-  "credentials": "include"
-});
-.then(async response => {
-  // Always read response as raw text and display it (no JSON parsing)
-  let displayText;
-  try {
-    displayText = await response.text();
-  } catch (err) {
-    displayText = 'Error reading response: ' + err;
-  }
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Heytap API Render</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: #0f1220;
+      color: #eaeaf0;
+      padding: 24px;
+    }
+    .card {
+      max-width: 900px;
+      margin: 0 auto;
+      background: #171a2e;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.4);
+      padding: 20px 24px;
+    }
+    h1 {
+      margin: 0 0 12px;
+      font-size: 20px;
+    }
+    .label {
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: .08em;
+      color: #9aa3ff;
+      margin-bottom: 6px;
+    }
+    button {
+      background: linear-gradient(135deg, #5b7cfa, #8f6bff);
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      padding: 10px 16px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    pre {
+      margin-top: 12px;
+      background: #0b0e1a;
+      padding: 16px;
+      border-radius: 8px;
+      overflow: auto;
+      font-size: 13px;
+      line-height: 1.5;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Heytap API Response</h1>
+    <button id="fetchBtn">Fetch Data</button>
 
-  // Escape before inserting into the page
-  function escapeHtml(str) {
-    return String(str)
-      .replace(/&/g, '&amp;')
-      .replace(/</g, '&lt;')
-      .replace(/>/g, '&gt;')
-      .replace(/"/g, '&quot;')
-      .replace(/'/g, '&#39;');
-  }
+    <div class="label">encrypted data 1</div>
+    <pre id="output">Waiting for response…</pre>
+  </div>
 
-  const wrapper = document.createElement('div');
-  const pre = document.createElement('pre');
-  pre.textContent = displayText; // already safe when assigned to textContent
-  const note = document.createElement('p');
-  note.textContent = 'encrypted text';
+  <script>
+    const btn = document.getElementById("fetchBtn");
+    const output = document.getElementById("output");
 
-  wrapper.appendChild(pre);
-  wrapper.appendChild(note);
-  document.body.appendChild(wrapper);
+    btn.onclick = async () => {
+      output.textContent = "Loading...";
+      try {
+        const res = await fetch(
+          "https://id-sg.heytap.com/uc/web/v1/user-info/query-basic",
+          {
+            method: "POST",
+            mode: "cors",
+            credentials: "include",
+            referrer: "https://id.heytap.com/",
+            headers: {
+              "x-app-acappkey": "CuGsbe6HdAe6vDBHFew2Di",
+              "x-app-deviceid": "3b82f93bb3a737ae6fd9817f8ce9f1e2",
+              "x-app-fromht": "true",
+              "x-app-overseaclient": "true",
+              "x-biz-appkey": "TZeSXfQXxrCyjhvARaVrmw",
+              "x-device-brand": "HEYTAP",
+              "x-device-clienttype": "WEB",
+              "x-envelope-version": "V1",
+              "x-requesttime": "1767565064629",
+              "x-sign": "b4B5KDwzXYWnoZ5jjDm6KyFda7Q=",
+              "x-sign-key": "4iAEb620alQ8s8c8ss8o0K8sS",
+              "x-timezone": "GMT+1",
+              "x-web-client-type": "pc",
+              "content-type": "application/json"
+            },
+            body:
+              "\"Ik6Dp63RWsoh4ZMHxwn6kYgmbA8fPjJXPr5hd7OgA70necgbGyPaVIOzz6Rp1+0j82SAccs5VcwYgWiHKgkWJJ6etOlV0rOLZviYev4WUTGmJU8i9y/pkphZKsYedvtXlBHypbECtNYPEXWxE7ovYgVCixfK3Y4L2uDhnEcsqbQ=.hnR8OM6+1DBzC3l1PF8ngH7t4JBR8z7nC3unR47CncyxLMiEevbj815e2exeNEIAoJAwnXDi4mHouVTeaVOiKKccxf8aF4bYMX989RYzuHcAn5u6ul6VdYNtNMgss1DeW4ob/OaRRDSNi2KTBadIwNhJW0c13aDJbSKRAN7x3xc=.eBw=\""
+          }
+        );
 
-  console.log(displayText, 'encrypted text');
-})
-.catch(err => {
-  const errMsg = 'Fetch error: ' + err;
-  document.body.appendChild(document.createTextNode(errMsg));
-  console.error(err);
-});
-</script>
+        const data = await res.json();
+        output.textContent = JSON.stringify(data, null, 2);
+      } catch (err) {
+        output.textContent = "Error:\n" + err;
+      }
+    };
+  </script>
+</body>
+</html>
