--- a/none.html
+++ b/none.html
@@ -72,7 +72,7 @@
     const btn = document.getElementById("fetchBtn");
     const output = document.getElementById("output");
 
-    btn.onclick = async () => {
+     async () => {
       output.textContent = "Loading encrypted data...";
       try {
         const res = await fetch(
